fix issue with background on mobile

--- a/styles.css
+++ b/styles.css
@@ -323,80 +323,38 @@ cursor: pointer;
 
 @media only screen and (max-width: 767px) {
 
-html {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
-}
-
-header 
-{
- display: none;
-}
-
-h1 {
-  font-size: 3.5rem;
-}
-
-.skill-list {
-  margin-bottom: 25px;
-}
-
-.content.visible {
-  max-height: none; 
+  html { 
+    font-family: 'Montserrat', sans-serif; font-size: 16px; 
   }
 
-.image-container img {
-  margin: 10px;
-  width: 50px;
-  height: 50px;
-  transition: transform 0.5s ease; 
-}
-
-#career-content, #personal-content {
-  display: flex;
-  flex-direction: column-reverse;
-}
-
-.token, .token2 {
-  margin-left: 50px;
-  margin-right: 50px;
-  align-self: center;
-  width: 200px; 
-  height: 200px;
+  body {
+    background-attachment: fixed; 
+    background-size: cover; 
+    background-position: center; 
   }
-
-.portfolio-container {
-  display: flex; 
-  flex-direction: column;
-  width: 100%; 
-  border-top: 2px solid #fff;
-  padding-top: 20px;
-  gap: 50px;
-}
-
-.portfolio-container a, #api-gif {
-  width: 100%; 
-}
-
-#css-portfolio, #hagen, #spellbook, #etchy {
-  flex-direction: column;
-}
-
-.close-arrow { 
-  height: 25px;
-}
-
-.contact {
-  padding: 10px;
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
-}
-
-.contact img {
-  width: 20px;
-  height: 2%;
-  transition: transform 0.5s ease;
-}
-
-}
+  
+  h1 { 
+    font-size: 3.5rem; 
+  }
+  
+  .skill-list { margin-bottom: 25px; }
+  
+  .image-container img { margin: 10px; width: 50px; height: 50px; transition: transform 0.5s ease; }
+  
+  #career-content, #personal-content { display: flex; flex-direction: column-reverse; }
+  
+  .token, .token2 { margin-left: 50px; margin-right: 50px; align-self: center; width: 200px; height: 200px; }
+  
+  .portfolio-container { display: flex; flex-direction: column; width: 100%; border-top: 2px solid #fff; padding-top: 20px; gap: 50px; }
+  
+  .portfolio-container a, #api-gif { width: 100%; }
+  
+  #css-portfolio, #hagen, #spellbook, #etchy { flex-direction: column; }
+  
+  .close-arrow { height: 25px; }
+  
+  .contact { padding: 10px; position: fixed; bottom: 0px; left: 0px; }
+  
+  .contact img { width: 20px; height: 2%; transition: transform 0.5s ease; }
+  
+  }
